--- a/_posts/2017-06-27-idee.markdown
+++ b/_posts/2017-06-27-idee.markdown
@@ -8,7 +8,7 @@ finished: false
 ## Préambule
 
 Cette page contient les premiers jets d'une idée qui me semble avoir du potentiel.
-Les grandes lignes y sont mais de nombreux points sont vagues et restent à être définis. Le but de la page n'est pas de faire un descriptif des détails d'implémentation et bien que certaines références s'y trouvent ces dernières ne sont que des repères pour aider à conceptualiser l'idée d'un point de vue plus technique.
+Les grandes lignes y sont mais de nombreux points sont vagues et restent à être défini. Le but de la page n'est pas de faire un descriptif des détails d'implémentation et bien que certaines références s'y trouvent ces dernières ne sont que des repères pour aider à conceptualiser l'idée d'un point de vue plus technique.
 
 
 ## Abstract
@@ -134,5 +134,3 @@ Ce système peut créér des injustices et peut être confronté à de vives cri
 Je pense que les éventuelles injustices créées par ce système sont négligeable en comparaison du nombre de situations injustes qu'il permet de normaliser. 
 
 Gardons en tête que les principales personnes lésés par ce système sont les personnes qui abusent à l'heure actuelle d'autres impunément. Ce sont principalement elles qui risquent de se pleindre car leur influance, pouvoir finnancier ou autres status social ne sera pour une fois pas une arme éfficace pour leur permettre de continuer à se livrer à leur comportements litigieux.
-
-
