--- a/_posts/2017-07-14-py-class.markdown
+++ b/_posts/2017-07-14-py-class.markdown
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Python: classes"
+title: "Py: classes"
 subtitle: "classes "
 date: 2017-07-14
 author: Sol
-category: py
+category: Py
 tags:  
 finished: false
 ---
