--- a/_posts/2017-06-27-idee.markdown
+++ b/_posts/2017-06-27-idee.markdown
@@ -5,6 +5,8 @@ date: 2017-06-27
 finished: false
 ---
 
+# 1. tripAdvisor de la qualité humaine
+
 ## Préambule
 
 Cette page contient les premiers jets d'une idée qui me semble avoir du potentiel.
@@ -126,7 +128,7 @@ Concernant les technologies employé par le projet présenté ici de nombreuses 
 Ces lignes ne sont qu'un premier jet et de nombreux éléments restent à définir mais je pense que l'idée est posée.
 
 
-
+ 
 ### En vrac
 
 Ce système peut créér des injustices et peut être confronté à de vives critiques. 
@@ -137,85 +139,11 @@ Gardons en tête que les principales personnes lésés par ce système sont les 
 
 
 
+# 2. affichage de message arrière voiture
 
+Tout simplement un petit afficheur pour communiquer des messages  simples avec le vehicule de derrière.
 
-# TEMP
-```
-VISUAL STUDIO CODE SETTINGS SYNC 
-Version: 2.8.2
-
-Upload Summary
-
---------------------
-GITHUB TOKEN: 437580913138ca1fa835c1f6d88b41d0a42b079c
-GITHUB GIST: 23f1e9a909e77fa8876b5cf65abc2187
-GITHUB GIST TYPE: Secret
-
---------------------
-
-If current theme / file icon extension is not installed. Restart will be Required to Apply Theme and File Icon.
-
-
-Files Upload.
-
-extensions.json
-keybindings.json
-locale.json
-settings.json
-cpp.json > snippets|cpp.json
-latex.json > snippets|latex.json
-markdown.json > snippets|markdown.json
-typescript.json > snippets|typescript.json
-vsicons.settings.json
-```
-
-EXTENSIONS ADDED :
-
-Align - Version :0.2.0
-another-word-completion - Version :0.0.4
-ayu - Version :0.3.0
-code-gnu-global - Version :0.2.2
-code-runner - Version :0.6.24
-code-settings-sync - Version :2.8.2
-cpptools - Version :0.12.0
-debug - Version :0.20.0
-easy-icons - Version :0.3.1
-easy-snippet-maker - Version :0.0.5
-file-icons - Version :1.0.3
-FlatUI - Version :1.3.2
-fontsize-shortcuts - Version :1.3.0
-git-extension-pack - Version :0.1.2
-githistory - Version :0.2.1
-gitignore - Version :0.5.0
-gitlens - Version :4.3.1
-html-css-class-completion - Version :1.7.0
-html-snippets - Version :0.1.0
-indentation-level-movement - Version :1.1.1
-jupyter - Version :1.1.3
-latex - Version :0.1.3
-MagicPython - Version :1.0.10
-markdown-shortcuts - Version :0.8.1
-mono-debug - Version :0.15.5
-monokai-plusplus - Version :1.6.0
-project-manager - Version :0.18.0
-python - Version :0.6.5
-reloaded-cpp - Version :0.1.5
-reloaded-themes - Version :0.2.1
-rewrap - Version :1.3.0
-sublime-keybindings - Version :2.0.1
-Theme-dimmed-monokai - Version :0.0.2
-theme-glacier - Version :0.0.10
-theme-material-theme - Version :1.0.1
-Theme-Monokai - Version :0.0.2
-theme-monokaisharp - Version :0.2.4
-theme-pack - Version :0.1.1
-theme-sapphire - Version :0.2.1
-theme-tinaciousdesign - Version :0.2.6
-vscode-findinpage - Version :0.2.3
-vscode-great-icons - Version :2.1.7
-vscode-icon-theme - Version :1.5.0
-vscode-icons - Version :7.9.0
-vscode-icontheme-nomo-dark - Version :1.3.0
-vscode-multiclip - Version :0.1.2
-vscode-open-in-github - Version :1.2.7
-vscode-simple-icons - Version :1.3.0
+* "Ne me colle pas stp"
+* "Dés que je peux je te laisse passer"
+* "Ne me colle pas, je finis de le dépasser et je me range"
+* ...
