--- a/_posts/2017-07-14-py-class.markdown
+++ b/_posts/2017-07-14-py-class.markdown
@@ -1,7 +1,7 @@
----
+* Objet ---
 layout: post
 title: "Py: classes"
-subtitle: "classes "
+subtitle: "Python: Programmation orientée objet "
 date: 2017-07-14
 author: Sol
 category: Py
@@ -9,26 +9,22 @@ tags:
 finished: false
 ---
 
-Un objet en Python est défini par sa structure (les attributs qu'il contient et les méthodes qu'il lui sont applicables) plutôt que par son type.
+## Introduction
 
-Ainsi, pour faire simple, un fichier sera un objet possédant des méthodes `read`, `write` et `close` Tout objet respectant cette définition sera considéré parPython comme un fichier.
+**Un objet en Python est défini par sa structure (les attributs qu'il contient et les méthodes qu'il lui sont applicables) plutôt que par son type.**
 
-```python
-class FakeFile:
-    def read(self, size=0):
-        return ''
-    def write(self, s):
-        return 0
-    def close(self):
-        pass
-
-f = FakeFile()
-print('foo', file=f)
-```
-
-Python est entièrement construit autour de cette idée appelée **duck-typing**: 
+Python est entièrement construit autour de cette idée appelée _**duck-typing**_: 
 
 > "Si je vois un animal qui vole comme un canard, cancane comme un canard, et nage comme un canard, alors j'appelle cet oiseau un cannard" (James Whitcomb Riley)
+
+La **programmation orientée objet** est le _**paradigme**_ qui nous permet de définir nos propres types d'objets, avec leurs propriétés et opérations.
+
+## Objet et caractéristiques
+
+Un objet est constitué de 3 caractéristiques:
+1. Un **type** qui identifie le **rôle** de l'objet.
+2. Des **attributs** qui sont les **propriétés** de l'objet.
+3. Des **méthodes**, les **opérations** (actions) qui s'appliquent sur l'objet.
 
 
 
