--- a/_posts/2017-07-25-py-OOP.markdown
+++ b/_posts/2017-07-25-py-OOP.markdown
@@ -9,6 +9,9 @@ tags: divers, fr, en
 finished: false
 ---
 
+#### sources
+* [sam&max](http://sametmax.com/le-guide-ultime-et-definitif-sur-la-programmation-orientee-objet-en-python-a-lusage-des-debutants-qui-sont-rassures-par-les-textes-detailles-qui-prennent-le-temps-de-tout-expliquer-partie-1/)
+
 ## Introduction
 
 La programmation orienté objet est un style (*paradigme*) de programmation qui permet de **regrouper au même endroit** le comportement (fonctions) et les données (structures) qui sont faites pour aller ensemble.
