--- a/_posts/2017-07-25-py-OOP.markdown
+++ b/_posts/2017-07-25-py-OOP.markdown
@@ -88,7 +88,7 @@ print(nouvel_objet)
 print(nouvel_objet.methode())
 ```
 
-output:
+**output**:
 
 ```python
 <__main__.DescriptionObjet object at 0x7f48f271e940>
@@ -203,7 +203,7 @@ class DescriptionObjet:
 un_objet = DescriptionObjet()
 ```
 
-output:
+**output**:
 
 ```
 L'objet a ete cree !
@@ -225,7 +225,7 @@ print(v.couleur)
 print(v.carburent)
 ```
 
-output:
+**output**:
 
 ```python
 noire
@@ -261,7 +261,7 @@ print(v4.couleur)
 print(v4.carburent)
 ```
 
-output:
+**output**:
 
 ```python
 v1:
