--- a/_posts/2017-07-25-py-yield.markdown
+++ b/_posts/2017-07-25-py-yield.markdown
@@ -99,7 +99,7 @@ print("Second appel de la fonction:")
 display(generateur)
 ```
 
-output:
+**output**:
 
 ```python
 Premier appel de la fonction:
